estructura de home y diseño del menu

--- a/Discusion - Guia 1/Centroamerica/nicaragua.html
+++ b/Discusion - Guia 1/Centroamerica/nicaragua.html
@@ -11,12 +11,12 @@
         <span class="logo" style="font-size: 40px;">Países Centroamericanos</span>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//el-salvador.html">El Salvador</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//guatemala.html">Guatemala</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//honduras.html">Honduras</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//nicaragua.html">Nicaragua</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//costa-rica.html">Costa Rica</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/">Inicio</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/el-salvador.html">El Salvador</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/guatemala.html">Guatemala</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/honduras.html">Honduras</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/nicaragua.html">Nicaragua</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/costa-rica.html">Costa Rica</a></li>
             </ul>
         </nav>
     </header>
