diseño css de paises de centroamerica y programa favorito

--- a/Discusion - Guia 1/Centroamerica/costa-rica.html
+++ b/Discusion - Guia 1/Centroamerica/costa-rica.html
@@ -11,7 +11,7 @@
         <span class="logo" style="font-size: 40px;">Países Centroamericanos</span>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/">Inicio</a></li>
                 <li><a href="https://robertomelendez.w3spaces.com/el-salvador.html">El Salvador</a></li>
                 <li><a href="https://robertomelendez.w3spaces.com/guatemala.html">Guatemala</a></li>
                 <li><a href="https://robertomelendez.w3spaces.com/honduras.html">Honduras</a></li>
