--- a/Discusion - Guia 1/Centroamerica/el-salvador.html
+++ b/Discusion - Guia 1/Centroamerica/el-salvador.html
@@ -11,12 +11,12 @@
         <span class="logo" style="font-size: 40px;">Países Centroamericanos</span>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//el-salvador.html">El Salvador</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//guatemala.html">Guatemala</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//honduras.html">Honduras</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//nicaragua.html">Nicaragua</a></li>
-                <li><a href="https://robertomelendez.w3spaces.com//costa-rica.html">Costa Rica</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/">Inicio</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/el-salvador.html">El Salvador</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/guatemala.html">Guatemala</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/honduras.html">Honduras</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/nicaragua.html">Nicaragua</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/costa-rica.html">Costa Rica</a></li>
             </ul>
         </nav>
     </header>
@@ -214,7 +214,7 @@
 
             <div>
                 <h3>Ruta de las Flores</h3>
-                <img src="https://lh3.googleusercontent.com/proxy/ZLEPmmL6I5n_1lcTwMqSxgOVPMQIAVx56WTcKbxwxMdr4_I8GtARHVCeYKji8SmB72x6lgKvFwv-l3E035vWhlF6uR1062pm0OaA-_RqFSqMmZeURc4T" alt="ruta-de-las-flores-el-salvador">
+                <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/06/6a/f1/e6.jpg" alt="ruta-de-las-flores-el-salvador">
                 <p>
                     En este paseo los paisajes verdes, cafetales y un agradable clima fresco no faltaran. Consiste en visitar 5 pueblos vivos, los cuales son cercanos entre sí. Conocerás Nahzuicalo, el cual es famoso por sus artesanías y por ser el centro indígena más significativo
                     del país. Luego Salcoatitán, donde encontrarás dos iglesias bonitas y una de las ceibas más antiguas que podrás ver observar alguna vez. Tu siguiente parada será Juayua, donde los festivales gastronómicos son todo un atractivo. Apaneca
