--- a/Discusion - Guia 1/Programa-Favorito/programa-fav.html
+++ b/Discusion - Guia 1/Programa-Favorito/programa-fav.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Costa Rica | Centroamerica</title>
+    <title>Los Simpson</title>
 </head>
 
 <body>
@@ -11,13 +11,13 @@
         <span class="logo" style="font-size: 40px;">Inicio</span>
         <nav>
             <ul>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="https://robertomelendez.w3spaces.com/">Inicio</a></li>
             </ul>
         </nav>
     </header>
     <article>
         <h1>Mi Programa Favorito: Los Simpson</h1>
-        <img src="https://static.wikia.nocookie.net/lossimpson/images/f/f8/Familia_Simpson.png/revision/latest/scale-to-width-down/180?cb=20090414030121&path-prefix=es" alt="bandera-de-costa-rica" style="height: 50%;">
+        <img src="https://es.web.img3.acsta.net/pictures/20/10/22/15/35/1550360.jpg" style="width: 50%;">
         <p>
             The Simpsons (en español, Los Simpson) es una serie estadounidense de animación, en formato de comedia de situación, creada por Matt Groening para Fox Broadcasting Company y emitida en varios países del mundo. La serie es una sátira hacia la sociedad
             estadounidense que narra la vida y el día a día de una familia de clase media de ese país (cuyos miembros son Homer, Marge, Bart, Lisa y Maggie Simpson) que vive en un pueblo ficticio llamado Springfield.
